# DE_PJ

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow/config/: .gitkeep
airflow/dags/: .gitkeep
airflow/plugins/: .gitkeep
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: .gitkeep
dbt/models/marts/: .gitkeep
dbt/models/staging/: .gitkeep
dbt/models/warehouse/: .gitkeep
dbt/seeds/: .gitkeep
dbt/tests/: .gitkeep
docker/postgres/: init-dw.sql  init-source.sql
docs/: QUICKSTART.md
docs/architecture/: .gitkeep  staging_design.md
docs/business_requirements/: .gitkeep  business_requirements.md
docs/data_dictionary/: .gitkeep  source_schema.md
docs/test_reports/: .gitkeep  sprint1_detailed_report.md
notebooks/analysis/: .gitkeep
notebooks/exploration/: .gitkeep
notebooks/prototyping/: .gitkeep
plan/: Plan_Checklist.md  sprint1.md
requirements/: requirements-core.txt  requirements-dbt.txt  requirements-dev.txt  requirements-quality.txt  requirements-viz.txt
scripts/data_generation/: .gitkeep  generate_data.py
scripts/database/: .gitkeep
scripts/utils/: .gitkeep
src/: __init__.py
src/config/: __init__.py  settings.py
src/connectors/: __init__.py  database.py
src/data_quality/: __init__.py
src/etl/: __init__.py
src/ingestion/: __init__.py  export_to_staging.py
src/models/: __init__.py
src/reconciliation/: __init__.py
tests/: test_sprint1.py
tests/data_quality/: __init__.py
